--- a/templates/code.html
+++ b/templates/code.html
@@ -45,6 +45,7 @@
         <div class="editor-container p-8">
             <textarea id="editor">print("Hello World")</textarea>
             <button class="btn btn-success" id="runBtn" style="margin: 20px; margin-left: 38px;">Run code</button>
+            <h3>Output: </h3>
             <div id="output" style="margin: 20px; margin-left: 38px;"></div>
         </div>
     
