--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
     <div class="hero-content text-neutral-content text-center">
         <div class="max-w-md">
             <h1 class="mb-5 text-5xl font-bold">
-                Best way of learing to Code!
+                Best way of learning to Code!
             </h1>
             <p class="mb-5">
                 Level up your coding skills like a game—earn XP, unlock
